[gd_scene load_steps=4 format=3 uid="uid://dmyvfgesh7dsg"]

[ext_resource type="Script" uid="uid://bbigoxebitfk6" path="res://scripts/ui/unit_select.gd" id="1"]
[ext_resource type="Shader" uid="uid://cnksqny6s3mip" path="res://shaders/dark_fantasy_bg.gdshader" id="2"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("2")
shader_parameter/top_color = Color(0.06, 0.06, 0.08, 1)
shader_parameter/bottom_color = Color(0.02, 0.02, 0.03, 1)
shader_parameter/vignette = 0.75
shader_parameter/vignette_softness = 0.6

[node name="UnitSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
material = SubResource("1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Left" type="VBoxContainer" parent="Center/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Center/HBox/Left"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Choose your starting unit"

[node name="Scroll" type="ScrollContainer" parent="Center/HBox/Left"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Center/HBox/Left/Scroll"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5

[node name="Right" type="VBoxContainer" parent="Center/HBox"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="SelectedLabel" type="Label" parent="Center/HBox/Right"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Selected: (none)"

[node name="StartButton" type="Button" parent="Center/HBox/Right"]
custom_minimum_size = Vector2(320, 56)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Start Game"

[connection signal="pressed" from="Center/HBox/Right/StartButton" to="." method="_on_StartButton_pressed"]
